# whois-rest

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
app/: api.py  index.py  main.py  schemas.py  settings.py  whois.py
tests/: conftest.py  test_app.py  test_whois.py
