[tool.poetry]
name = "whois-rest"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^0.8.0"
asyncwhois = "^1.0.0"
fastapi = {extras = ["standard"], version = "^0.73.0"}
gunicorn = "^20.1.0"
pyhumps = "^3.5.3"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
whois-parser = "^0.1.4"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autopep8 = "^1.5.7"
black = "^21.5b1"
coveralls = "^3.1.0"
flake8 = "^3.9.2"
isort = "^5.8.0"
mypy = "^0.812"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.0"
pytest-mock = "^3.6.1"
pytest-randomly = "^3.8.0"
pytest-sugar = "^0.9.4"
pyupgrade = "^2.19.0"
httpx = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
